2.12
- recognize new kernel-3.19 drivers

2.11
- recognize new kernel-3.18 drivers (mga#14799)

2.10
- include new 3.18 USB host drivers (mga#14799)

- recognize new kernel-3.17 drivers
- recognize hyper-v network card
- recognize new kernel-3.16 drivers
- stop creating /dev entries now that we use udev
- recognize new kernel-3.15 drivers

Version 2.7  - 14 Juni 2014, by Per Øyvind Karlsen

- rebuild for new codename
- recognize new kernel-3.14 drivers

Version 2.6 - 19 December, by Per Øyvind Karlsen

- fix incorrect check against size of pointer rather than dereference it first
  (-Wsizeof-pointer-memaccess)

Version 2.5 - 17 November, by Per Øyvind Karlsen

- bring back pixel's holy shotgun algorithm for unmounting when rebooting in
  order to ensure we really try to get all disks unmounted
- load modules for usb controllers and hid devices in rescue mode as well,
  otherwise you'll easily find yourself standing there looking st00pid without
  any ability to use the keyboard.. :p

Version 2.4 - 28 October 2013, by Per Øyvind Karlsen

- detect new kernel-3.12 modules

Version 2.3 -  6 May 2013, by Per Øyvind Karlsen

- follow ldetect api changes wrt. kmodules from modalias vs pcitable

Version 2.2 - 31 March 2013, by Per Øyvind Karlsen

- probe virtual drivers too (mga#9546)
  (install from Xen hd not supported yet)
- load hid_generic module
- update list_modules for xen dom0 and virtio support (#9242)

Version 2.1 -  5 Februar 2013, by Per Øyvind Karlsen

- fix regression in pcmcia related code
- compile with -fno-rtti -fno-exceptions when building against uClibc

Version 2.0 -  3 November 2012, by Per Øyvind Karlsen

- compile implementation of /sbin/consoletype into stage1 binary
- switch to C++
- do reboot using 'reboot' from busybox rather than manually go through the
  process ourself
- fix 'Go to console' to actually spawn a shell rather than just exiting
  rescue-gui
- disable SPAWN_SHELL, there's no need for this crippled shell when we now have