@@ -1,3 +1,7 @@
+- when updating pcmcia ids kernel module aliases, in case of not finding any
+  pcmcia modules aliases from the most recent kernel module tree, move on to
+  next most recent kernel module tree found.
+
 2.12
 - recognize new kernel-3.19 drivers
 
